# curlrs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  text_input.rs
